--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Pansy's Asteroid Game</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Asteroid Game</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    <div>Pansy Kuang, 2021</div>
+		    <div>Instructions</div>
+		     <div>W - TURN LEFT</div>
+		    <div>S - TURN RIGHT</div>
+		     <div>D - ACCELERATE</div>
+		     <div>A - SLOW DOWN</div>
+		    <div>Z - HYPERSPACE</div>
 	    </footer>
 	</body>
 </html>
