--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    <div>Pansy Kuang, 2021</div>
-		    <div>Instructions</div>
-		     <div>W - TURN LEFT</div>
-		    <div>S - TURN RIGHT</div>
-		     <div>D - ACCELERATE</div>
-		     <div>A - SLOW DOWN</div>
-		    <div>Z - HYPERSPACE</div>
+		    <div>Pansy Kuang, 2021</div> <br>
+		    <div>Instructions</div><br>
+		     <div>W - TURN LEFT</div><br>
+		    <div>S - TURN RIGHT</div><br>
+		     <div>D - ACCELERATE</div><br>
+		     <div>A - SLOW DOWN</div><br>
+		    <div>Z - HYPERSPACE</div><br>
 	    </footer>
 	</body>
 </html>
