--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		     <div>D - ACCELERATE</div><br>
 		     <div>A - SLOW DOWN</div><br>
 		    <div>Z - HYPERSPACE</div><br>
+		    <div>M - SHOOT BULLETS</div><br>
 	    </footer>
 	</body>
 </html>
